Ingress/ingress-definition.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  spec:
    rules:
    - host: example.com
      http:
        paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: foo-service
              port:
                number: 3000
        - path: /bar
          pathType: Prefix
          backend:
            service:
              name: bar-service
              port:
                number: 6000
    - host: foo.example.com
      http:
        paths:
        - pathType: Prefix
          path: "/foo"
          backend:
            service:
              name: foo-service-2
              port:
                number: 80
    - host: "*.foo.example.com"
      http:
        paths:
        - pathType: Prefix
          path: "/foo"
          backend:
            service:
              name: foo-service-3
              port:
                number: 8080
